[package]
name = "oxidising-places-people-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
opencv = "0.63"
tempfile = "3.3.0"
itertools = "0.10.3"